修改更新单品信息接口
